fix hamburger align

--- a/dev/scss/components/header/hamburger.scss
+++ b/dev/scss/components/header/hamburger.scss
@@ -1,7 +1,7 @@
 .hamburger-menu {
   position: absolute;
   left: 10px;
-  top: 28px;
+  top: 34px;
   z-index: 4;
 
   &__bar {
